# HurricaneAlley

./: .gitignore  .gitmodules  README.md  i2cTest  i2cTests.cpp  joyStickTest  joyStickTest.cpp  mecanumTest  mecanumTest.cpp  ps5Controller.cpp  ps5Controller.h  qe.c  square  square.cpp  threadTest.cpp  visionTest.py  zumoRC.cpp  zumoRC~HEAD
Code/: CART  CMakeLists.txt  GoldRushAuto  GoldRushDrive  GoldRushTele  README.md  Teleop.cpp
Code/Actions/: DelayAction.cpp  DelayAction.h  DriveToPointAction.cpp  DriveToPointAction.h  DumpPringle.cpp  DumpPringle.h  GoToAgitator.cpp  GoToAgitator.h  GoToStack.cpp  GoToStack.h  GoToStore1.cpp  GoToStore1.h  GoToStore2.cpp  GoToStore2.h  GoldRushAction.cpp  GoldRushAction.h  InsertToPringle.cpp  InsertToPringle.h  LoadMarshmellow.cpp  LoadMarshmellow.h  PlaceDuck.cpp  PlaceDuck.h  PlaceFoodChips.cpp  PlaceFoodChips.h  Pringle.cpp  Pringle.h  StackAction.cpp  StackAction.h  StoreDuck.cpp  StoreDuck.h  StoreMarshmellow.cpp  StoreMarshmellow.h  TurnOffAgitator.cpp  TurnOffAgitator.h  placeAction.cpp  placeAction.h
Code/HardwareInterfaces/: colorsensor.cpp  colorsensor.h  digitalsensor.cpp  digitalsensor.h  encoder.cpp  encoder.h  hardware.h  i2c.cpp  motor.cpp  motor.h  octoquad.cpp  octoquad.h  servo.cpp  servo.h
Code/HardwareInterfaces/octoquadExamples/: encoder.c
Code/Opmodes/: Auto.cpp  Runner.cpp  Runner.h  SimpleDrive.cpp  Teleop.cpp
Code/Robot/: drivetrain.cpp  drivetrain.h  robot.cpp  robot.h
Code/Robot/HardwareInterfaces/: encoder.cpp  encoder.h  hardware.cpp  hardware.h  motor.cpp  motor.h
Code/Robot/mechanisms/: duck.cpp  duck.h  intake.cpp  intake.h  revolver.cpp  revolver.h
Code/Utilities/: I2C.h  pid.cpp  pid.h  pose.cpp  pose.h  utilFunc.cpp  utilFunc.h
OldCode/: README.md  cTest  joyStickTest  joyStickTest.cpp  mecanumTest  mecanumTest.cpp  qe  threadTest  wiringPiTest.cpp  wpt
PITesting/: i2c.cpp  i2c_bcm2835test.cpp  libTest  libTest.cpp  simple.cpp
PiPCA9685/: CMakeLists.txt  apt_dependencies.txt
PiPCA9685/cmake/: PiPCA9685Config.cmake
PiPCA9685/examples/cpp/: CMakeLists.txt
PiPCA9685/include/PiPCA9685/: PCA9685.h
PiPCA9685/src/: I2CPeripheral.cpp  I2CPeripheral.h  PCA9685.cpp
RobotControl/: .gitignore  close.py  colorTest.py  constants.py  demo.py  driveSweepTest.py  driveTest.py  main.py  requirements.txt  servoDetach.py  servoTest.py  startupTest.py  strafeTest.py  test.py  test2.py  utils.py
RobotControl/Actions/: DelayAction.py  GoldRushAction.py  StartupActions.py  duckActions.py  foodActions.py  marshmallowActions.py  placementActions.py  runActions.py
RobotControl/Hardware/: actuators.py  encoders.py
RobotControl/Robot/: Drivebase.py  Duck.py  Intake.py  Marshmallows  Marshmallows.py  Robot.py
RobotControl/Vision/: mainVision.py
Vision/: .gitignore  Detect2.py  mainVision.py  test.py  visionTest.py
Vision/pngimageconverter/: imageconverter.py
Vision/testing/: ColorDetectorFinal  ColorDetectorFinal.py  Detect2.py  Detect3.py  rangeFinder.py  visionTest.py
mecanumKinematics/: driverControl.py  helloWorld.py  polarPlotter.py
zumoRC/: zumoRC.ino
